--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
+    "react-animated-text": "^0.1.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
